--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/select": "^2.4.15",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
