--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.1"
+    "react-switch": "^7.1.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-font-inter": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
