--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroui/select": "^2.4.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.477.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
