--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/core": "^0.34.2",
     "@heroui/input-otp": "^2.1.14",
+    "@heroui/modal": "^2.2.13",
     "@heroui/select": "^2.4.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
