--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroui/input-otp": "^2.1.14",
     "@heroui/modal": "^2.2.13",
     "@heroui/select": "^2.4.15",
+    "@radix-ui/react-dialog": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
